flower center align corrected

--- a/day-4/task-1/style.css
+++ b/day-4/task-1/style.css
@@ -89,7 +89,7 @@ nav {
 }
 
 body {
-  background-color: #27221f;
+  background-color: #1f2427;
   color: aliceblue;
   background-image: url(assets/coffeebean.svg);
   padding: 0;
